plugins {
    id 'java'
    id "io.freefair.lombok" version "8.13"
    id "run.halo.plugin.devtools" version "0.6.0"
}

group = 'run.halo.plugin.minidocs'
description = 'A knowledge base plugin for Halo'
// devtools 的 generatePluginComponentsIdx 等任务要求项目版本已设置
version = '1.0.0'

repositories {
    mavenCentral()
}

dependencies {
    implementation platform('run.halo.tools.platform:plugin:2.26.0')
    compileOnly 'run.halo.app:api'

    testImplementation 'run.halo.app:api'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
    options.release = 21
}

// 将 ui 子项目的构建产物（ui/build/dist 完整目录）打包进插件 JAR
tasks.register('processUiResources', Copy) {
    from project(':ui').layout.buildDirectory.dir('dist')
    into layout.buildDirectory.dir('resources/main/ui')
    dependsOn project(':ui').tasks.named('assemble')
    shouldRunAfter tasks.named('processResources')

    doFirst {
        // 避免旧哈希文件残留导致 Halo 控制台加载到过期资源
        delete layout.buildDirectory.dir('resources/main/ui')
    }
}

tasks.named('classes') {
    dependsOn tasks.named('processUiResources')
}

halo {
    version = '2.26'
    superAdminUsername = 'admin'
    superAdminPassword = 'admin'
    port = 8090
    // debug = true
    // debugPort = 5005
    // suspend = true
    externalUrl = 'http://localhost:8090'
}

// 构建插件 JAR 后，通过 mininote CLI 直接升级线上 Halo 的插件
// 使用前需先配置线上服务器：mininote auth login（或 mininote auth login --profile 线上环境名）
tasks.register('upgradePlugin', Exec) {
    group = 'halo'
    description = '构建插件 JAR 并通过 mininote plugin upgrade 升级到线上'

    dependsOn tasks.named('build')

    def pluginJar = layout.buildDirectory.file("libs/${project.name}-${project.version}.jar")
    inputs.file(pluginJar)

    doFirst {
        println "正在通过 mininote 升级插件: ${pluginJar.get().asFile.absolutePath}"
    }

    // Windows 下 mininote 是 npm 安装的 .cmd 脚本，ProcessBuilder 无法直接执行，
    // 必须通过 cmd /c 包装（mininote 需在 PATH 中）
    commandLine 'cmd', '/c', 'mininote', 'plugin', 'upgrade', project.name,
        '--file', pluginJar.get().asFile.absolutePath
}
